log/build_2024-07-16_10-14-34/beginner_py/stderr.log
  File "/home/zzq/Desktop/ros2_ws/install/beginner_py/lib/python3.10/site-packages/beginner_py/sub.py", line 20
    """
       ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xbb in position 5: invalid start byte

